# screen_space_rendering

./: .gitignore  CMakeLists.txt  README.md
shaders/: gbuffer.frag  gbuffer.vert  ssrt.frag  ssrt.vert
src/: main.cpp  shader.h
